доработки карточек, исправление фоновых картинок

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
         <section id="section-news" class="section-news">
             <div class="container">
-                <!-- <div class="line"></div> -->
-                <h1 class="section-news__title">Увеличиваем выгоды на HAVAL <br> <span>в Химках к Чёрной пятнице!</span></h1>
+                <h1 class="section-news__title">Увеличиваем выгоды на HAVAL <br> <span>в Химках к Чёрной пятнице! <div class="line"></div>
+                </span></h1>
                 <button class="section-news__button" data-fancybox href="#hidden">Зафиксировать условия</button>
             </div>
         </section>
@@ -89,7 +89,7 @@
                             <div class="list-item__info">
                                 <div class="list-item__info-wrapper">
                                     <h3 class="list-item__info-title">HAVAL M6</h3>
-                                    <a href="#">Записаться на тест-драйв</a>
+                                    <a class="list-item__info-button" data-fancybox href="#hidden">Записаться на тест-драйв</a>
                                 </div>
 
                                 <p class="list-item__info-description">Выгода до <span>410 000 ₽</span></p>
@@ -109,19 +109,19 @@
 
                             <div class="list-item__conditions">
                                 <ul class="list-item__conditions-list">
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item tag">
                                         Выгода по госпрограмме
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item wallet">
                                         Максимальные выгоды по трейд-ин
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item protection">
                                         КАСКО в подарок
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item wheel">
                                         Зимние шины в подарок
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item gift">
                                         Доп.оборудование на 100 000р в подарок
                                     </li>
                                 </ul>
@@ -138,8 +138,8 @@
                         <div class="cars__list-item" href="#">
                             <div class="list-item__info">
                                 <div class="list-item__info-wrapper">
-                                    <h3 class="list-item__info-title">HAVAL M6</h3>
-                                    <a href="#">Записаться на тест-драйв</a>
+                                    <h3 class="list-item__info-title">HAVAL DARGO X</h3>
+                                    <a class="list-item__info-button" data-fancybox href="#hidden">Записаться на тест-драйв</a>
                                 </div>
 
                                 <p class="list-item__info-description">Выгода до <span>410 000 ₽</span></p>
@@ -159,19 +159,19 @@
 
                             <div class="list-item__conditions">
                                 <ul class="list-item__conditions-list">
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item tag">
                                         Выгода по госпрограмме
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item wallet">
                                         Максимальные выгоды по трейд-ин
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item protection">
                                         КАСКО в подарок
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item wheel">
                                         Зимние шины в подарок
                                     </li>
-                                    <li class="list-item__conditions-item">
+                                    <li class="list-item__conditions-item gift">
                                         Доп.оборудование на 100 000р в подарок
                                     </li>
                                 </ul>
